--- a/SportsStore.Web.UI/Views/web.config
+++ b/SportsStore.Web.UI/Views/web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="SportsStore.Web.UI" />
+        <add namespace="SportsStore.Web.UI.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
