--- a/SportsStore.Web.UI/Web.config
+++ b/SportsStore.Web.UI/Web.config
@@ -9,17 +9,27 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\PROJETO\SportsStore\database\SportsStore.mdf;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="EFDbContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\PROJETO\SportsStore\database\SportsStore.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Email.WriteAsFile" value="true" />
+    <add key="ClientValidationEnabled" value="false"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret"/>
+        </credentials>
+      </forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
